comm/mailnews/db/gloda/test/unit/test_index_junk_local.js fails when default store is maildir
Categories
(MailNews Core :: Backend, defect)
Tracking
(thunderbird_esr91 wontfix)
| Tracking | Status | |
|---|---|---|
| thunderbird_esr91 | --- | wontfix |
People
(Reporter: benc, Assigned: benc)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
To replicate, switch to maildir as default. In your build's dist/bin/defaults/pref/mailnews.js:
-pref("mail.serverDefaultStoreContractID", "@mozilla.org/msgstore/berkeleystore;1");
+pref("mail.serverDefaultStoreContractID", "@mozilla.org/msgstore/maildirstore;1");
and run the test:
$ ./mach xpcshell-test comm/mailnews/db/gloda/test/unit/test_index_junk_local.js
| Assignee | ||
Comment 1•4 years ago
|
||
Notes to self:
The reason this is failing is that the maildir store implements a copyMessages() function which can short-circuit copies within the same store (by just copying the files). This short-circuited maildir copy works, but it seems to be lacking the notifications that gloda relies on to keep its index updated. The test passes when the maildir short-circuit is disabled, requiring a full message copy - the same code path as mbox.
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
Some more notes to leave myself some breadcrumbs on message copying:
It wasn't a case of missing notifications in the short-cut maildir copyMessages(). It was too many notifications. The nsIMsgCopyServiceListener OnStartCopy/OnEndCopy pair was being invoked more than once and that was screwing up the generator-based async waits in the test code.
Comment 2 patch should fix this.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/a40a35624384
Avoid doubling-up nsIMsgCopyServiceListener notifications during maildir->maildir message copying. r=mkmelin
| Assignee | ||
Comment 5•4 years ago
|
||
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/e584d77100d3
Remove unused copylistener param in nsIMsgPluggableStore.copyMessages(). r=mkmelin
Description
•