Bug 1717375 - Avoid doubling-up nsIMsgCopyServiceListener notifications during maildir->maildir message copying. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D126627

--HG--
extra : moz-landing-system : lando